Fixed potentially overflowing text in console view

--- a/editor_extensions/vscode/commandcrafter/webviews/minecraftConsole/index.scss
+++ b/editor_extensions/vscode/commandcrafter/webviews/minecraftConsole/index.scss
@@ -47,6 +47,9 @@ body {
     max-width: 20px;
 }
 
+.NonExpandableLogEntry, .ExpandableLogEntryTitle, .ExpandableLogEntryDetail {
+    word-wrap: break-word;
+}
 .ExpandableLogEntryDetail {
     white-space: pre-wrap;
     overflow: hidden;
